include/hs_uv.h

#define UV_FS_O_APPEND       _O_APPEND
#define UV_FS_O_CREAT        _O_CREAT
#define UV_FS_O_EXCL         _O_EXCL
#define UV_FS_O_RANDOM       _O_RANDOM
#define UV_FS_O_RDONLY       _O_RDONLY
#define UV_FS_O_RDWR         _O_RDWR
#define UV_FS_O_SEQUENTIAL   _O_SEQUENTIAL
#define UV_FS_O_SHORT_LIVED  _O_SHORT_LIVED
#define UV_FS_O_TEMPORARY    _O_TEMPORARY
#define UV_FS_O_TRUNC        _O_TRUNC
#define UV_FS_O_WRONLY       _O_WRONLY
#define UV_FS_O_DIRECT       0x2000000 /* FILE_FLAG_NO_BUFFERING */
#define UV_FS_O_DIRECTORY    0
#define UV_FS_O_DSYNC        0x4000000 /* FILE_FLAG_WRITE_THROUGH */
#define UV_FS_O_EXLOCK       0
#define UV_FS_O_NOATIME      0
#define UV_FS_O_NOCTTY       0
#define UV_FS_O_NOFOLLOW     0
#define UV_FS_O_NONBLOCK     0
#define UV_FS_O_SYMLINK      0
#define UV_FS_O_SYNC         0x8000000 /* FILE_FLAG_WRITE_THROUGH */
# define UV_FS_O_APPEND       O_APPEND
# define UV_FS_O_APPEND       0
# define UV_FS_O_CREAT        O_CREAT
# define UV_FS_O_CREAT        0
# define UV_FS_O_DIRECT       O_DIRECT
# define UV_FS_O_DIRECT       0
# define UV_FS_O_DIRECTORY    O_DIRECTORY
# define UV_FS_O_DIRECTORY    0
# define UV_FS_O_DSYNC        O_DSYNC
# define UV_FS_O_DSYNC        0
# define UV_FS_O_EXCL         O_EXCL
# define UV_FS_O_EXCL         0
# define UV_FS_O_EXLOCK       O_EXLOCK
# define UV_FS_O_EXLOCK       0
# define UV_FS_O_NOATIME      O_NOATIME
# define UV_FS_O_NOATIME      0
# define UV_FS_O_NOCTTY       O_NOCTTY
# define UV_FS_O_NOCTTY       0
# define UV_FS_O_NOFOLLOW     O_NOFOLLOW
# define UV_FS_O_NOFOLLOW     0
# define UV_FS_O_NONBLOCK     O_NONBLOCK
# define UV_FS_O_NONBLOCK     0
# define UV_FS_O_RDONLY       O_RDONLY
# define UV_FS_O_RDONLY       0
# define UV_FS_O_RDWR         O_RDWR
# define UV_FS_O_RDWR         0
# define UV_FS_O_SYMLINK      O_SYMLINK
# define UV_FS_O_SYMLINK      0
# define UV_FS_O_SYNC         O_SYNC
# define UV_FS_O_SYNC         0
# define UV_FS_O_TRUNC        O_TRUNC
# define UV_FS_O_TRUNC        0
# define UV_FS_O_WRONLY       O_WRONLY
# define UV_FS_O_WRONLY       0
#define UV_FS_O_RANDOM        0
#define UV_FS_O_SHORT_LIVED   0
#define UV_FS_O_SEQUENTIAL    0
#define UV_FS_O_TEMPORARY     0
typedef uv__dirent_t hs_uv__dirent_t;
#define HAVE_DIRENT_TYPES
#define UV__DT_DIR     UV_DIRENT_DIR
#define UV__DT_FILE    UV_DIRENT_FILE
#define UV__DT_LINK    UV_DIRENT_LINK
#define UV__DT_FIFO    UV_DIRENT_FIFO
#define UV__DT_SOCKET  UV_DIRENT_SOCKET
#define UV__DT_CHAR    UV_DIRENT_CHAR
#define UV__DT_BLOCK   UV_DIRENT_BLOCK
# define HAVE_DIRENT_TYPES
#  define UV__DT_FILE DT_REG
#  define UV__DT_FILE -1
#  define UV__DT_DIR DT_DIR
#  define UV__DT_DIR -2
#  define UV__DT_LINK DT_LNK
#  define UV__DT_LINK -3
#  define UV__DT_FIFO DT_FIFO
#  define UV__DT_FIFO -4
#  define UV__DT_SOCKET DT_SOCK
#  define UV__DT_SOCKET -5
#  define UV__DT_CHAR DT_CHR
#  define UV__DT_CHAR -6
#  define UV__DT_BLOCK DT_BLK
#  define UV__DT_BLOCK -7
void hs_uv_fs_scandir_cleanup(uv_dirent_t** dents, HsInt n);
void hs_uv_fs_scandir_extra_cleanup(uv_dirent_t*** dents_p, HsInt n);
////////////////////////////////////////////////////////////////////////////////
// fs, none thread pool version
int32_t hs_uv_fs_open(const char* path, int flags, int mode);
HsInt hs_uv_fs_close(int32_t file);
HsInt hs_uv_fs_read(int32_t file, char* buffer, HsInt buffer_size, int64_t offset);
HsInt hs_uv_fs_write(int32_t file, char* buffer, HsInt buffer_size, int64_t offset);
HsInt hs_uv_fs_unlink(const char* path);
HsInt hs_uv_fs_mkdir(const char* path, int mode);
HsInt hs_uv_fs_mkdtemp(const char* tpl, HsInt tpl_size, char* temp_path);
HsInt hs_uv_fs_rmdir(const char* path);
HsInt hs_uv_fs_scandir(const char* path, uv_dirent_t*** dents);
HsInt hs_uv_fs_stat(const char* path, uv_stat_t* stat);
HsInt hs_uv_fs_fstat(int32_t file, uv_stat_t* stat);
HsInt hs_uv_fs_lstat(const char* path, uv_stat_t* stat);
HsInt hs_uv_fs_rename(const char* path, const char* path2);
HsInt hs_uv_fs_fsync(int32_t file);
HsInt hs_uv_fs_fdatasync(int32_t file);
HsInt hs_uv_fs_ftruncate(int32_t file, int64_t off);
////////////////////////////////////////////////////////////////////////////////
// fs, thread pool version
HsInt hs_uv_fs_open_threaded(const char* path, int flags, int mode, uv_loop_t* loop);
HsInt hs_uv_fs_close_threaded(int32_t file, uv_loop_t* loop);
HsInt hs_uv_fs_read_threaded(int32_t file, char* buffer, HsInt buffer_size, int64_t offset, uv_loop_t* loop);
HsInt hs_uv_fs_write_threaded(int32_t file, char* buffer, HsInt buffer_size, int64_t offset, uv_loop_t* loop);
HsInt hs_uv_fs_unlink_threaded(const char* path, uv_loop_t* loop);
HsInt hs_uv_fs_mkdir_threaded(const char* path, int mode, uv_loop_t* loop);
HsInt hs_uv_fs_mkdtemp_threaded(const char* tpl, HsInt tpl_size, char* temp_path, uv_loop_t* loop);
HsInt hs_uv_fs_rmdir_threaded(const char* path, uv_loop_t* loop);
HsInt hs_uv_fs_scandir_threaded(const char* path, uv_dirent_t*** dents, uv_loop_t* loop);